src/test/data/highlighting/instruction_annotations_one.tz
parameter unit;
storage unit;
code
  {
    # only one type annotation allowed here
    PAIR @a <error descr="Unexpected variable annotation">@a</error> ;

    # only variable annotations are allowed on these instructions
    DUP <error descr="Unsupported annotation">:a</error> ;
    PUSH <error descr="Unsupported annotation">:a</error> int 123 ;
    CONS <error descr="Unsupported annotation">:a</error> ;
    SIZE <error descr="Unsupported annotation">:a</error> ;
    MAP <error descr="Unsupported annotation">:a</error> {} ;
    MEM <error descr="Unsupported annotation">:a</error> ;
    UPDATE <error descr="Unsupported annotation">:a</error> ;
    GET <error descr="Unsupported annotation">:a</error> ;
    LAMBDA <error descr="Unsupported annotation">:a</error> int int {} ;
    EXEC <error descr="Unsupported annotation">:a</error> ;
    ADD <error descr="Unsupported annotation">:a</error> ;
    SUB <error descr="Unsupported annotation">:a</error> ;
    CONCAT <error descr="Unsupported annotation">:a</error> ;
    MUL <error descr="Unsupported annotation">:a</error> ;
    OR <error descr="Unsupported annotation">:a</error> ;
    AND <error descr="Unsupported annotation">:a</error> ;
    XOR <error descr="Unsupported annotation">:a</error> ;
    NOT <error descr="Unsupported annotation">:a</error> ;
    ABS <error descr="Unsupported annotation">:a</error> ;
    IS_NAT <error descr="Unsupported annotation">:a</error> ;
    INT <error descr="Unsupported annotation">:a</error> ;
    NEG <error descr="Unsupported annotation">:a</error> ;
    EDIV <error descr="Unsupported annotation">:a</error> ;
    LSL <error descr="Unsupported annotation">:a</error> ;
    LSR <error descr="Unsupported annotation">:a</error> ;
    COMPARE <error descr="Unsupported annotation">:a</error> ;
    EQ <error descr="Unsupported annotation">:a</error> ;
    NEQ <error descr="Unsupported annotation">:a</error> ;
    LT <error descr="Unsupported annotation">:a</error> ;
    GT <error descr="Unsupported annotation">:a</error> ;
    LE <error descr="Unsupported annotation">:a</error> ;
    GE <error descr="Unsupported annotation">:a</error> ;
    ADDRESS <error descr="Unsupported annotation">:a</error> ;
    CONTRACT <error descr="Unsupported annotation">:a</error> int ;
    SET_DELEGATE <error descr="Unsupported annotation">:a</error> ;
    IMPLICIT_ACCOUNT <error descr="Unsupported annotation">:a</error> ;
    NOW <error descr="Unsupported annotation">:a</error> ;
    AMOUNT <error descr="Unsupported annotation">:a</error> ;
    BALANCE <error descr="Unsupported annotation">:a</error> ;
    HASH_KEY <error descr="Unsupported annotation">:a</error> ;
    CHECK_SIGNATURE <error descr="Unsupported annotation">:a</error> ;
    BLAKE2B <error descr="Unsupported annotation">:a</error> ;
    STEPS_TO_QUOTA <error descr="Unsupported annotation">:a</error> ;
    SOURCE <error descr="Unsupported annotation">:a</error> ;
    SENDER <error descr="Unsupported annotation">:a</error> ;
    SELF <error descr="Unsupported annotation">:a</error> ;
    CAST <error descr="Unsupported annotation">:a</error> ;
    RENAME <error descr="Unsupported annotation">:a</error> ;

    # only variable annotations are allowed on these instructions
    DUP <error descr="Unsupported annotation">%a</error> ;
    PUSH <error descr="Unsupported annotation">%a</error> int 123 ;
    UNIT <error descr="Unsupported annotation">%a</error> ;
    PAIR %a ;
    CAR %a ;
    CDR %a ;
    NIL <error descr="Unsupported annotation">%a</error> int ;
    CONS <error descr="Unsupported annotation">%a</error> ;
    SIZE <error descr="Unsupported annotation">%a</error> ;
    MAP <error descr="Unsupported annotation">%a</error> {} ;
    MEM <error descr="Unsupported annotation">%a</error> ;
    EMPTY_SET <error descr="Unsupported annotation">%a</error> int ;
    EMPTY_MAP <error descr="Unsupported annotation">%a</error> int int ;
    UPDATE <error descr="Unsupported annotation">%a</error> ;
    GET <error descr="Unsupported annotation">%a</error> ;
    LAMBDA <error descr="Unsupported annotation">%a</error> int int {} ;
    EXEC <error descr="Unsupported annotation">%a</error> ;
    ADD <error descr="Unsupported annotation">%a</error> ;
    SUB <error descr="Unsupported annotation">%a</error> ;
    CONCAT <error descr="Unsupported annotation">%a</error> ;
    MUL <error descr="Unsupported annotation">%a</error> ;
    OR <error descr="Unsupported annotation">%a</error> ;
    AND <error descr="Unsupported annotation">%a</error> ;
    XOR <error descr="Unsupported annotation">%a</error> ;
    NOT <error descr="Unsupported annotation">%a</error> ;
    ABS <error descr="Unsupported annotation">%a</error> ;
    IS_NAT <error descr="Unsupported annotation">%a</error> ;
    INT <error descr="Unsupported annotation">%a</error> ;
    NEG <error descr="Unsupported annotation">%a</error> ;
    EDIV <error descr="Unsupported annotation">%a</error> ;
    LSL <error descr="Unsupported annotation">%a</error> ;
    LSR <error descr="Unsupported annotation">%a</error> ;
    COMPARE <error descr="Unsupported annotation">%a</error> ;
    EQ <error descr="Unsupported annotation">%a</error> ;
    NEQ <error descr="Unsupported annotation">%a</error> ;
    LT <error descr="Unsupported annotation">%a</error> ;
    GT <error descr="Unsupported annotation">%a</error> ;
    LE <error descr="Unsupported annotation">%a</error> ;
    GE <error descr="Unsupported annotation">%a</error> ;
    ADDRESS <error descr="Unsupported annotation">%a</error> ;
    CONTRACT <error descr="Unsupported annotation">%a</error> int ;
    SET_DELEGATE <error descr="Unsupported annotation">%a</error> ;
    IMPLICIT_ACCOUNT <error descr="Unsupported annotation">%a</error> ;
    NOW <error descr="Unsupported annotation">%a</error> ;
    AMOUNT <error descr="Unsupported annotation">%a</error> ;
    BALANCE <error descr="Unsupported annotation">%a</error> ;
    HASH_KEY <error descr="Unsupported annotation">%a</error> ;
    CHECK_SIGNATURE <error descr="Unsupported annotation">%a</error> ;
    BLAKE2B <error descr="Unsupported annotation">%a</error> ;
    STEPS_TO_QUOTA <error descr="Unsupported annotation">%a</error> ;
    SOURCE <error descr="Unsupported annotation">%a</error> ;
    SENDER <error descr="Unsupported annotation">%a</error> ;
    SELF <error descr="Unsupported annotation">%a</error> ;
    CAST <error descr="Unsupported annotation">%a</error> ;
    RENAME <error descr="Unsupported annotation">%a</error> ;

    # two variable annotations are invalid, the 2nd annotation must be highlighted in this case
    DUP @a <error descr="Only one variable annotation supported">@a</error> ;
    PUSH @a <error descr="Only one variable annotation supported">@a</error> int 123 ;
    UNIT @a <error descr="Only one variable annotation supported">@a</error> ;
    SOME @a <error descr="Only one variable annotation supported">@a</error> ;
    NONE @a <error descr="Only one variable annotation supported">@a</error> int ;
    LEFT @a <error descr="Only one variable annotation supported">@a</error> int ;
    RIGHT @a <error descr="Only one variable annotation supported">@a</error> int ;
    NIL @a <error descr="Only one variable annotation supported">@a</error> int ;
    CONS @a <error descr="Only one variable annotation supported">@a</error> ;
    SIZE @a <error descr="Only one variable annotation supported">@a</error> ;
    MAP @a <error descr="Only one variable annotation supported">@a</error> {} ;
    MEM @a <error descr="Only one variable annotation supported">@a</error> ;
    EMPTY_SET @a <error descr="Only one variable annotation supported">@a</error> int ;
    EMPTY_MAP @a <error descr="Only one variable annotation supported">@a</error> int int ;
    UPDATE @a <error descr="Only one variable annotation supported">@a</error> ;
    GET @a <error descr="Only one variable annotation supported">@a</error> ;
    LAMBDA @a <error descr="Only one variable annotation supported">@a</error> int int {} ;
    EXEC @a <error descr="Only one variable annotation supported">@a</error> ;
    ADD @a <error descr="Only one variable annotation supported">@a</error> ;
    SUB @a <error descr="Only one variable annotation supported">@a</error> ;
    CONCAT @a <error descr="Only one variable annotation supported">@a</error> ;
    MUL @a <error descr="Only one variable annotation supported">@a</error> ;
    OR @a <error descr="Only one variable annotation supported">@a</error> ;
    AND @a <error descr="Only one variable annotation supported">@a</error> ;
    XOR @a <error descr="Only one variable annotation supported">@a</error> ;
    NOT @a <error descr="Only one variable annotation supported">@a</error> ;
    ABS @a <error descr="Only one variable annotation supported">@a</error> ;
    IS_NAT @a <error descr="Only one variable annotation supported">@a</error> ;
    INT @a <error descr="Only one variable annotation supported">@a</error> ;
    NEG @a <error descr="Only one variable annotation supported">@a</error> ;
    EDIV @a <error descr="Only one variable annotation supported">@a</error> ;
    LSL @a <error descr="Only one variable annotation supported">@a</error> ;
    LSR @a <error descr="Only one variable annotation supported">@a</error> ;
    COMPARE @a <error descr="Only one variable annotation supported">@a</error> ;
    EQ @a <error descr="Only one variable annotation supported">@a</error> ;
    NEQ @a <error descr="Only one variable annotation supported">@a</error> ;
    LT @a <error descr="Only one variable annotation supported">@a</error> ;
    GT @a <error descr="Only one variable annotation supported">@a</error> ;
    LE @a <error descr="Only one variable annotation supported">@a</error> ;
    GE @a <error descr="Only one variable annotation supported">@a</error> ;
    ADDRESS @a <error descr="Only one variable annotation supported">@a</error> ;
    CONTRACT @a <error descr="Only one variable annotation supported">@a</error> int ;
    SET_DELEGATE @a <error descr="Only one variable annotation supported">@a</error> ;
    IMPLICIT_ACCOUNT @a <error descr="Only one variable annotation supported">@a</error> ;
    NOW @a <error descr="Only one variable annotation supported">@a</error> ;
    AMOUNT @a <error descr="Only one variable annotation supported">@a</error> ;
    BALANCE @a <error descr="Only one variable annotation supported">@a</error> ;
    HASH_KEY @a <error descr="Only one variable annotation supported">@a</error> ;
    CHECK_SIGNATURE @a <error descr="Only one variable annotation supported">@a</error> ;
    BLAKE2B @a <error descr="Only one variable annotation supported">@a</error> ;
    STEPS_TO_QUOTA @a <error descr="Only one variable annotation supported">@a</error> ;
    SOURCE @a <error descr="Only one variable annotation supported">@a</error> ;
    SENDER @a <error descr="Only one variable annotation supported">@a</error> ;
    SELF @a <error descr="Only one variable annotation supported">@a</error> ;
    CAST @a <error descr="Only one variable annotation supported">@a</error> ;
    RENAME @a <error descr="Only one variable annotation supported">@a</error> ;

    # valid
    PAIR :a ;
    CAR @a ;
    CDR @a ;

    # one variable annotations is valid
    DUP @a ;
    PUSH @a int 123 ;
    UNIT @a ;
    SOME @a ;
    NONE @a int ;
    PAIR @a ;
    CAR @a ;
    CDR @a ;
    LEFT @a int ;
    RIGHT @a int ;
    NIL @a int ;
    CONS @a ;
    SIZE @a ;
    MAP @a {} ;
    MEM @a ;
    EMPTY_SET @a int ;
    EMPTY_MAP @a int int ;
    UPDATE @a ;
    GET @a ;
    LAMBDA @a int int {} ;
    EXEC @a ;
    ADD @a ;
    SUB @a ;
    CONCAT @a ;
    MUL @a ;
    OR @a ;
    AND @a ;
    XOR @a ;
    NOT @a ;
    ABS @a ;
    IS_NAT @a ;
    INT @a ;
    NEG @a ;
    EDIV @a ;
    LSL @a ;
    LSR @a ;
    COMPARE @a ;
    EQ @a ;
    NEQ @a ;
    LT @a ;
    GT @a ;
    LE @a ;
    GE @a ;
    ADDRESS @a ;
    CONTRACT @a int ;
    SET_DELEGATE @a ;
    IMPLICIT_ACCOUNT @a ;
    NOW @a ;
    AMOUNT @a ;
    BALANCE @a ;
    HASH_KEY @a ;
    CHECK_SIGNATURE @a ;
    BLAKE2B @a ;
    STEPS_TO_QUOTA @a ;
    SOURCE @a ;
    SENDER @a ;
    SELF @a ;
    CAST @a ;
    RENAME @a ;

    # zero annotations is valid
    DUP ;
    PUSH int 123 ;
    UNIT ;
    SOME ;
    NONE int ;
    PAIR ;
    CAR ;
    CDR ;
    LEFT int ;
    RIGHT int ;
    NIL int ;
    CONS ;
    SIZE ;
    MAP {} ;
    MEM ;
    EMPTY_SET int ;
    EMPTY_MAP int int ;
    UPDATE ;
    GET ;
    LAMBDA int int {} ;
    EXEC ;
    ADD ;
    SUB ;
    CONCAT ;
    MUL ;
    OR ;
    AND ;
    XOR ;
    NOT ;
    ABS ;
    IS_NAT ;
    INT ;
    NEG ;
    EDIV ;
    LSL ;
    LSR ;
    COMPARE ;
    EQ ;
    NEQ ;
    LT ;
    GT ;
    LE ;
    GE ;
    ADDRESS ;
    CONTRACT int ;
    SET_DELEGATE ;
    IMPLICIT_ACCOUNT ;
    NOW ;
    AMOUNT ;
    BALANCE ;
    HASH_KEY ;
    CHECK_SIGNATURE ;
    BLAKE2B ;
    STEPS_TO_QUOTA ;
    SOURCE ;
    SENDER ;
    SELF ;
    CAST ;
    RENAME ;

    # valid
    SOME %a ;
    NONE %a int ;
    LEFT %a int ;
    RIGHT %a int ;

    UNIT :a ;
    SOME :a ;
    NONE :a int ;
    LEFT :a int ;
    RIGHT :a int ;
    NIL :a int ;
    EMPTY_SET :a int ;
    EMPTY_MAP :a int int ;

    # valid
    CAR @a ;
    CDR @a ;
  }